<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    tools:context="com.siteam.eorg.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" android:baselineAligned="false">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/lCat1"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@color/colorBackCat1"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCat1"
                style="@style/category_title_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_category_one"
                android:textColor="@color/colorTextCat1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskCount1"
                style="@style/task_count_text"
                android:textColor="@color/colorTextCat1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCases1"
                style="@style/task_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/tasks"
                android:textColor="@color/colorTextCat1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskCount1" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/lCat2"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:elevation="2dp"
            android:background="@color/colorBackCat2"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCat2"
                style="@style/category_title_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_category_two"
                android:textColor="@color/colorTextCat2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskCount2"
                style="@style/task_count_text"
                android:textColor="@color/colorTextCat2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCases2"
                style="@style/task_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/tasks"
                android:textColor="@color/colorTextCat2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskCount2" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/lCat3"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:elevation="2dp"
            android:background="@color/colorBackCat3"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCat3"
                style="@style/category_title_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_category_third"
                android:textColor="@color/colorTextCat3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskCount3"
                style="@style/task_count_text"
                android:textColor="@color/colorTextCat3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCases3"
                style="@style/task_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/tasks"
                android:textColor="@color/colorTextCat3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskCount3" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/lCat4"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:elevation="2dp"
            android:background="@color/colorBackCat4"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCat4"
                style="@style/category_title_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_category_fourth"
                android:textColor="@color/colorTextCat4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskCount4"
                style="@style/task_count_text"
                android:textColor="@color/colorTextCat4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCases4"
                style="@style/task_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/tasks"
                android:textColor="@color/colorTextCat4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskCount4" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</LinearLayout>
